corrected alignment on login in header.  updated Register Form formatting to remove conflict with Login component

--- a/movie-app/src/Header.css
+++ b/movie-app/src/Header.css
@@ -86,7 +86,7 @@ nav {
 
 .headerLink {
     width: fit-content;
-    color: white;;
+    color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
